# my28brains

./: README.md  conda-lock.yml  conda.yaml  pyproject.toml
H2_SurfaceMatch/utils/: input_output.py
project_menstrual/: default_config.py  main_1_preprocess.py  main_2_linear_regression.py  main_3_dash_app.py  old_dash.py
project_pregnancy/: default_config.py  main_1_preprocess.py  main_3_dash_app.py  main_3_dash_app_old.py  main_4_dash_sidebar_ex.py
project_pregnancy/app/: calculations.py  page_content.py
project_pregnancy/notebooks/: 01_viz_brain_mris_and_segmentations_pregnancy.ipynb  02_viz_hormones_during_pregnancy.ipynb  03_regression.ipynb
project_regression/: default_config.py  main_2_regression.py  main_3_line_vs_geodesic.py
project_regression/notebooks/: 10_CVPRW_figs.ipynb
src/: viz.py
src/datasets/: synthetic.py  utils.py
src/preprocessing/: geodesics.py  smoothing.py
src/regression/: geodesic_regression.py  training.py
tests/: test_preprocessing.py
