[project]
name = "my28brains"
version = "0.1.0"
description = "Brain Shape Analysis through the Menstrual Cycle"
authors = [
    { name = "Geometric Intelligence Lab" },
    { name = "Adele Myers", email = "adele@ucsb.edu" },
]
readme = "README.md"
requires-python= "3.11"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

packages = [
    { include = "src" },
    { include = "project_menstrual" },
    { include = "project_pregnancy" },
    { include = "project_regression" },
]